Checkpoint. Replaced all non-scheduled executors.
Signed-off-by: Cody Littley <cody@swirldslabs.com>